# tcc

./: .gitignore  404.html  LICENSE  README.md  blog.html  docusaurus.config.ts  index.html  markdown-page.html  package-lock.json  package.json  sitemap.xml
blog/: 2026-03-16-inicio.md  2026-03-18-detalhamento-cua.md  2026-04-09-orquestrador-hello-world.md  2026-04-30-pipeline-tdd-primeira-execucao.md  2026-05-28-orquestrador-v2.md  agent-skills.html  archive.html  atom.xml  authors.html  authors.yml  cua.html  inicio.html  orquestrador-hello-world.html  orquestrador-v2.html  pipeline-tdd-primeira-execucao.html  rss.xml  tags.html  (+1 more)
demos/: .env.example  .gitignore  conftest.py  orquestrador_claude.py  orquestrador_v2.py  pyproject.toml
demos/orquestrador_v3/: agents.py  cua.py  models.py  prompts.py  run.py
demos/orquestrador_v3/prompts/: coder.md  cua_task.md  requisitos.md  spec_writer.md
demos/output/demo-cpf/: LOGS.txt  README.md  cpf.py
demos/output/demo-cpf/tests/: test_cpf.py
demos/output/demo-cpf/usage/: orquestrador_claude.csv
demos/output/task-cli-orquestrado/: structure.yml
demos/output/task-cli-orquestrado-v2/: structure.yml  task  tasks.json
demos/output/task-cli-orquestrado-v2/src/task/: __init__.py  __main__.py  cli.py  handlers.py  main.py  models.py  storage.py  validators.py
demos/output/task-cli-orquestrado-v2/tests/: test_acceptance.py
demos/output/task-cli-orquestrado/src/task/: __init__.py  __main__.py  commands.py  main.py  models.py  storage.py  validators.py
demos/output/task-cli-orquestrado/tests/: test_acceptance.py
(+167 files in other folders)
