[project]
name = "demos"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.6.16",
    "browser-use>=0.13.1",
    "claude-agent-sdk>=0.1.58",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
